# training

./: .gitignore  README.md  S_TODO.py  requirements.txt  s_datetime.py  s_dictionaries.py  s_files.py  s_iterator_iterable_generator.py  s_json_jsontype.json  s_lambdas.py  s_math_module.py  s_measure_time_and_memory.py  s_object_oriented_programming_2.py  s_oop_anotheritem.py  s_oop_phone.py  s_pipelines.py  s_regular_expressions.py  s_sets.py  s_source.py  s_tuples.py  s_typehints.py  scratch_file.py  scratch_file_jupyter.ipynb  scratch_file_python.py  shit.py  todo.txt  tricks.py
.ipynb_checkpoints/: scratch_file_jupyter-checkpoint.ipynb
AI/: readme.md
C/: .gitignore  main.c  s_arrays.h  s_boolean.h  s_constants.h  s_data_types.h  s_enumeration.h  s_files.h  s_for_while_loops.h  s_functions.h  s_if_else.h  s_math.h  s_operators.h  s_strings.h  s_structs.h  s_variables.h  utilities.h
C#/: .gitignore.txt  C#.sln
C/Syntax/: CMakeLists.txt  employees.txt  main.c  s_comments.h  s_constants.h  s_input.h  s_keywords.h  s_memory_addresses.h  s_pointers.h  s_switch.h  scratch.h  scratch_2.h
Machine learning Deep learning/: s_numpy.py  scratch_file.ipynb
Mini projects/: hangman.py  image_to_pixelart.py  image_to_textart.py  password_manager.py  rock_paper_scissors.py  tkinter_calculator.py
Others/: cmd.txt  copilot.txt  git.txt  pip.txt  pipelines.txt  vim.txt  virtualenv.txt  windows_shortcuts.txt
Python/: about_python  constants.py  requirements.txt  s_build_in_functions.py  s_circular_dependencies.py  s_cmd.py  s_collections.py  s_csv.py  s_decorators.py  (+16 more)
(+608 files in other folders)
